fix(Header.module.css): z-index=5 for header

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,5 +1,6 @@
 .header {
   position: fixed;
+  z-index: 5;
   width: 100%;
   height: 65px;  
   display: flex;
